@@ -51,8 +51,8 @@ plugin.tx_bzdstaffdirectory_pi1 {
 
 	# Date format used to show dates in the frontend
 	dateFormatYMD = %e. %B %Y
-	dateFormatInCompany = F Y
-	dateFormatBirthday = F Y
+	dateFormatInCompany = %B %Y
+	dateFormatBirthday = %B %Y
 
 	# the default sort order for the teamlist
 	sortOrder = last_name, first_name
